--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -105,6 +105,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/components/utils.js" async></script>
+    <script type="module" src="/components/site.js" async></script>
   </body>
 </html>
