--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -8,7 +8,7 @@ layout: layouts/base.njk
   <div id='toc'></div>
   <article class="post tdbc-mx-auto">
     <header class="post__header">
-      {%- include "mameyose.njk" %}
+      {{ comp.MlWithEngineering() | safe }}
       <h1>{{ title }}</h1>
       <div class="post__details">
         <time datetime="{{ page.date | htmlDateString }}">
@@ -117,21 +117,6 @@ layout: layouts/base.njk
     {{ comp.ArticleRanking() | safe}}
     {{ comp.FooterLinks() | safe }}
   </article>
-  <script type="module">
-    import PhotoSwipeLightbox from 'https://unpkg.com/photoswipe@5.4.2/dist/photoswipe-lightbox.esm.js';
-    window.addEventListener('load', function() {
-      const anchors = document.querySelectorAll('a.image-swipe');
-      anchors.forEach((el) => {
-        const img = el.querySelector('img');
-        el.setAttribute('data-pswp-width', img.naturalWidth);
-        el.setAttribute('data-pswp-height', img.naturalHeight);
-        new PhotoSwipeLightbox({
-          gallery: `#${el.id}`,
-          pswpModule: () => import('https://unpkg.com/photoswipe@5.4.2/dist/photoswipe.esm.js'),
-        }).init();
-      })
-    });
-  </script>
   {%- initClipboardJS %}
   {%- mermaidTag %}
   <script type="module">
