--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -90,6 +90,17 @@
     <link href="https://unpkg.com/photoswipe@5.4.2/dist/photoswipe.css" rel="stylesheet" />
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" integrity="sha384-Xi8rHCmBmhbuyyhbI88391ZKP2dmfnOl4rT9ZfRI7mLTdk1wblIUnrIq35nqwEvC" crossorigin="anonymous">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css"></noscript>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.css" />
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.js"></script>
+<script type="text/javascript">
+  algoliasearchNetlify({
+    appId: 'O9JY8ZL25T',
+    apiKey: 'ad56ef1ad9d13a7d8abc9dea01a5a6de',
+    siteId: '585ee948-cb8f-4598-a37f-e6304bfee394',
+    branch: 'main',
+    selector: 'div#search',
+  });
+</script>
   <body>
     <div id="fb-root"></div>
     {{ content | safe }}
