--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -31,7 +31,7 @@
 @import "post";
 @import "post-list";
 @import "links";
-@import "google-search";
+@import "search";
 @import "advent";
 @import "event";
 @import "season";
