--- a/src/css/style-dark.scss
+++ b/src/css/style-dark.scss
@@ -23,6 +23,6 @@
 @import "post";
 @import "post-list";
 @import "links";
-@import "google-search";
+@import "search";
 @import "advent";
 @import "summer";
