--- a/src/_includes/layouts/event.njk
+++ b/src/_includes/layouts/event.njk
@@ -19,7 +19,7 @@ layout: layouts/base.njk
     </header>
 
     <main class="event__content">
-      {{ content | safe }}
+      {{ comp.Calendar() | safe }}
     </main>
 
     <div style="margin-top:0">
