feat: advent calendar components (#916)
* wip: add calendar component

* use data file

* parameterize the data file

* update dir tree

* fix: typo

--- a/src/_includes/layouts/advent.njk
+++ b/src/_includes/layouts/advent.njk
@@ -19,7 +19,7 @@ layout: layouts/base.njk
     </header>
 
     <main class="event__content">
-      {{ content | safe }}
+      {{ comp.Calendar({ year: page.data.year, weekend: page.data.weekend }) | safe }}
     </main>
 
     <div style="margin-top:0">
