--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -116,6 +116,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/components/site.js" async></script>
+    <script type="module" src="/js/site.js" async></script>
   </body>
 </html>
