refactor: convert to tsx

--- a/src/_includes/layouts/advent.njk
+++ b/src/_includes/layouts/advent.njk
@@ -11,7 +11,7 @@ layout: layouts/base.njk
         <div style="float: right">
           <div id="preact-sns"></div>
           <script type="module">
-            import { render } from '/js/preact/social_plugins.js';
+            import { render } from '/js/preact/social_plugins.client.js';
             render({url: '{{ meta.url }}', path: '{{ page.data.url }}'}, document.getElementById("preact-sns"));
           </script>
         </div>
@@ -25,7 +25,7 @@ layout: layouts/base.njk
     <div style="margin-top:0">
       <div id='recommendation-app'></div>
       <script type="module">
-        import { render } from '/js/preact/recommendation.js';
+        import { render } from '/js/preact/recommendation.client.js';
         render({tags : '{{ tags | pageTags }}'}, document.getElementById("recommendation-app"));
 	  </script>
     </div>
