--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -97,7 +97,7 @@ layout: layouts/base.njk
     <div class="home-social-plugins">
       <div id="preact-sns"></div>
       <script type="module">
-        import { render } from '/js/preact/social_plugins.js';
+        import { render } from '/js/preact/social_plugins.client.js';
         render({url: '{{ meta.url }}', path: '{{ page.data.url }}'}, document.getElementById("preact-sns"));
       </script>
     </div>
