--- a/src/_includes/layouts/season.njk
+++ b/src/_includes/layouts/season.njk
@@ -10,7 +10,7 @@ layout: layouts/base.njk
       <div style="float: right">
         <div id="preact-sns"></div>
         <script type="module">
-          import { render } from '/js/preact/social_plugins.js';
+          import { render } from '/js/preact/social_plugins.client.js';
           render({url: '{{ meta.url }}', path: '{{ page.data.url }}'}, document.getElementById("preact-sns"));
         </script>
       </div>
@@ -23,7 +23,7 @@ layout: layouts/base.njk
     <div style="margin-top:0">
       <div id='recommendation-app'></div>
       <script type="module">
-        import { render } from '/js/preact/recommendation.js';
+        import { render } from '/js/preact/recommendation.client.js';
         render({tags : '{{ tags | pageTags }}'}, document.getElementById("recommendation-app"));
       </script>
     </div>
