--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -98,7 +98,7 @@ layout: layouts/base.njk
       <div id="preact-sns"></div>
       <script type="module">
         import { render } from '/js/preact/social_plugins.client.js';
-        render({url: '{{ meta.url }}', path: '{{ page.data.url }}'}, document.getElementById("preact-sns"));
+        render({url: '{{ meta.url }}', path: '{{ page.url }}'}, document.getElementById("preact-sns"));
       </script>
     </div>
     <div id="search"></div>
@@ -110,9 +110,9 @@ layout: layouts/base.njk
       {%- for page in search.pages('pages exclude!=true') -%}
       <li class="tdbc-card">
         <div class="tdbc-card__content">
-          <a href="{{ page.data.url }}" class="tdbc-card__title">{{ page.data.title }}
-            {%- if page.data.icon -%}<img alt="icon" class="icon" width="28px" height="28px" src="{{ page.data.icon }}" />{%- endif -%}</a>
-          <p>{{ page.data.description }}</p>
+          <a href="{{ page.url }}" class="tdbc-card__title">{{ page.title }}
+            {%- if page.icon -%}<img alt="icon" class="icon" width="28px" height="28px" src="{{ page.icon }}" />{%- endif -%}</a>
+          <p>{{ page.description }}</p>
         </div>
       </li>
       {%- endfor -%}
@@ -144,7 +144,7 @@ layout: layouts/base.njk
         <section class="post-list__wrapper recent-article">
           <h2 class="post-list__heading">新着記事<img alt="new-articles" class="icon" width="36px" height="100%" src="/img/icons/new-box.svg" /><a class="all-article-link" href="/articles/">全ての記事を見る</a></h2>
           <ul class="post-list">
-            {% for post in search.pages('layout^=layouts/post exclude!=true', 'date=desc') | limit(10) | data %}
+            {% for post in search.pages('layout^=layouts/post exclude!=true', 'date=desc') | limit(10) %}
               <li class="post-list__item">
                 <div>
                   <div class="post-list__meta">
@@ -162,7 +162,7 @@ layout: layouts/base.njk
 
                   <div class="post-list__tags">
                     {% for tag in post.tags %}
-                      {%- if (search.tags() | validTags).indexOf(tag) != -1 -%}
+                      {%- if (search.values('tags') | validTags).indexOf(tag) != -1 -%}
                         {% set tagUrl %}/tags/{{ tag }}/{% endset %}
                         <a href="{{ tagUrl | url }}">#{{ tag }}</a>
                       {%- endif -%}
