--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -73,7 +73,7 @@
       name="og:url"
       content="{{ meta.url }}{{ page.url }}"
     />
-    {% if page.title %}
+    {% if title %}
     <meta property="og:image" content="{{pageSocialImg}}" />
     <meta name="twitter:image" content="{{pageSocialImg}}" />
     {% else %}
