--- a/src/_includes/styles/_event.pcss
+++ b/src/_includes/styles/_event.pcss
@@ -1,6 +1,6 @@
-@import "typography";
+@import "styles/_typography.pcss";
 
-.season {
+.event {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,9 +11,12 @@
     margin: 0.5rem;
     border-collapse: collapse;
     width: 96%;
+    word-break: break-word;
   }
   th {
-    min-width: 110px;
+    width: 200px;
+  }
+  tr:nth-child(odd) {
     background-color: #d1dce7;
   }
   td {
@@ -54,7 +57,7 @@
   }
 }
 
-.season__details {
+.event__details {
   opacity: 0.6;
   font-size: 0.9rem;
   > * + * {
@@ -62,7 +65,7 @@
   }
 }
 
-.season__content {
+.event__content {
   word-wrap: break-word;
   h1 {
     margin-top: 4rem;
@@ -70,12 +73,12 @@
   }
 }
 
-.season__toc {
+.event__toc {
   display: none;
 }
 
 @media (min-width: 80ch) {
-  .season__toc {
+  .event__toc {
     display: block;
     margin: 2rem 0;
     border-width: thin;
@@ -93,11 +96,11 @@
   }
 }
 
-.season__aside {
+.event__aside {
   margin-top: 2rem;
 }
 
-.season__tags {
+.event__tags {
   opacity: 0.8;
   font-size: $text-sm;
   * + * {
