--- a/src/_includes/styles/_season.pcss
+++ b/src/_includes/styles/_season.pcss
@@ -1,6 +1,6 @@
-@import "typography";
+@import "styles/_typography.pcss";
 
-.event {
+.season {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,12 +11,9 @@
     margin: 0.5rem;
     border-collapse: collapse;
     width: 96%;
-    word-break: break-word;
   }
   th {
-    width: 200px;
-  }
-  tr:nth-child(odd) {
+    min-width: 110px;
     background-color: #d1dce7;
   }
   td {
@@ -57,7 +54,7 @@
   }
 }
 
-.event__details {
+.season__details {
   opacity: 0.6;
   font-size: 0.9rem;
   > * + * {
@@ -65,7 +62,7 @@
   }
 }
 
-.event__content {
+.season__content {
   word-wrap: break-word;
   h1 {
     margin-top: 4rem;
@@ -73,12 +70,12 @@
   }
 }
 
-.event__toc {
+.season__toc {
   display: none;
 }
 
 @media (min-width: 80ch) {
-  .event__toc {
+  .season__toc {
     display: block;
     margin: 2rem 0;
     border-width: thin;
@@ -96,11 +93,11 @@
   }
 }
 
-.event__aside {
+.season__aside {
   margin-top: 2rem;
 }
 
-.event__tags {
+.season__tags {
   opacity: 0.8;
   font-size: $text-sm;
   * + * {
