--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -87,6 +87,7 @@
       title="RSS Feed for {{ meta.siteName }}"
       href="/feed/"
     />
+    <link rel="stylesheet" href="/css/tailwind.css" />
     <link href="https://unpkg.com/photoswipe@5.4.2/dist/photoswipe.css" rel="stylesheet" />
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" integrity="sha384-Xi8rHCmBmhbuyyhbI88391ZKP2dmfnOl4rT9ZfRI7mLTdk1wblIUnrIq35nqwEvC" crossorigin="anonymous">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css"></noscript>
