--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -88,8 +88,8 @@ layout: layouts/base.njk
       <img src="/img/logo/mz-tech-logo-small.png" alt="mz-logo" width="100%" height="100%" />
     </div>
     <div>
-    <h1 class="tdbc-ink--mz tdbc-mb-none tdbc-top-title">{{ meta.siteName }}</h1>
-    <h2 class="tdbc-lead tdbc-content-maxlength tdbc-ink--gray tdbc-mt-md tdbc-mx-auto">
+    <h1 class="text-mz tdbc-mb-none tdbc-top-title">{{ meta.siteName }}</h1>
+    <h2 class="tdbc-lead tdbc-content-maxlength text-gray-500 tdbc-mt-md tdbc-mx-auto">
       {{ meta.siteDescription }}
     </h2>
     </div>
