--- a/src/_includes/styles/_card.pcss
+++ b/src/_includes/styles/_card.pcss
@@ -3,21 +3,12 @@
   position: relative;
   flex-direction: column;
   width: 100%;
-  border-radius: $tdbc-border-radius;
-  background-color: tdbc-color("hero");
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .18);
 
-  &__title {
-    margin-bottom: 1rem;
-    font-family: $tdbc-title-font-family;
-    font-size: $tdbc-h4-font-size;
-    line-height: 1.15;
-    text-decoration: none;
-  }
-
-  /* stylelint-disable selector-max-type, selector-no-qualifying-type */
   a.tdbc-card__title {
-    color: $tdbc-color-card-title;
+    color: #730099;
     &::before {
       position: absolute;
       top: 0;
@@ -38,34 +29,6 @@
     }
   }
 
-  &__content {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    flex-grow: 1;
-    padding: 24px;
-
-    a:last-child {
-      align-self: start;
-      margin-top: auto;
-    }
-
-    p {
-      position: relative;
-      margin: 0 0 1rem;
-      z-index: 10;
-    }
-
-    > ul {
-      list-style-type: disc;
-      padding-left: 1rem;
-
-      li + li {
-        margin-top: 0.5rem;
-      }
-    }
-  }
-
   &:hover a.tdbc-card__title::before {
     box-shadow: 0 0 0 3px #730099;
   }
@@ -73,13 +36,49 @@
   img:first-child {
     object-fit: cover;
     max-height: 10em;
-    border-radius: $tdbc-border-radius $tdbc-border-radius 0 0;
-  }
-  // stylelint-enable
-
-  &--outlined {
-    border: 1px solid scale-color($tdbc-color-gray, $lightness: 50%);
-    background-color: transparent;
-    box-shadow: none;
+    @apply rounded-xl;
   }
 }
+
+.tdbc-card__title {
+  margin-bottom: 1rem;
+  font-family: theme(fontFamily.sans);
+  font-size: 1.35rem;
+  line-height: 1.15;
+  text-decoration: none
+}
+
+.tdbc-card__content {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 24px;
+
+  a:last-child {
+    align-self: start;
+    margin-top: auto;
+  }
+
+  p {
+    position: relative;
+    margin: 0 0 1rem;
+    z-index: 10;
+  }
+
+  > ul {
+    list-style-type: disc;
+    padding-left: 1rem;
+
+    li + li {
+      margin-top: 0.5rem;
+    }
+  }
+}
+
+.tdbc-card--outlined {
+  border: 1px solid #adacb7;
+  background-color: rgba(0, 0, 0, 0);
+  box-shadow: none
+}
+
