--- a/src/_includes/styles/_links.pcss
+++ b/src/_includes/styles/_links.pcss
@@ -1,41 +1,49 @@
 .link-separator {
   margin: 1.5rem 0;
-  border-color: #dbd2e8;
+  border-color: #dbd2e8
 }
+
 .links {
   margin: 0 auto;
   padding: 5px;
+
   .recruit {
     margin: 3px;
     display: block;
+
     p {
-      font-size: 0.9rem;
-      margin: 0 0 0.2rem;
+      font-size: .9rem;
+      margin: 0 0 .2rem
     }
+
     img {
       width: auto;
-      display: inline;
+      display: inline
     }
   }
 }
 
 .page-ranking {
-  ol {
-    margin: 0;
-    padding-left: 1.5rem;
-  }
-  li {
-    font-size: $text-base;
-  }
-  margin: 0.5rem 0;
-  border-width: 0.5px;
+  margin: .5rem 0;
+  border-width: 1px;
   border-radius: 8px;
   border-color: #624176;
   display: none;
+  @apply rounded-xl border-stone-200 p-2;
+
+  ol {
+    margin: 0;
+    padding-left: 1.5rem
+  }
+
+  li {
+    font-size: 1rem
+  }
 }
+
 @media (min-width: 80ch) {
   .page-ranking {
     display: block;
-    max-width: 80ch;
+    max-width: 80ch
   }
 }
