--- a/src/_includes/styles/_sitenav.pcss
+++ b/src/_includes/styles/_sitenav.pcss
@@ -1,23 +1,17 @@
 #tdbc-siteid {
-  margin-left: 0.2rem;
-  font-size: $tdbc-h4-font-size;
-  text-decoration: none;
+  margin-left: .2rem;
+  font-size: 1.35rem;
+  text-decoration: none
 }
 
 .tdbc-sitenav {
-
-  a:not(.tdbc-button) {
-    color: tdbc-color("mz");
-  }
-
   .top-nav {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    color: tdbc-color("mz");
     height: 50px;
-    padding: 1em;
+    padding: 1em
   }
 
   .menu {
@@ -27,14 +21,14 @@
     margin: 0;
     padding: 0;
     z-index: 100;
-  }
 
-  .menu > li {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0.4rem;
-    overflow: hidden;
-    font-size: unquote("min(max(0.8rem, 1vw), 1rem)");
+    > li {
+      margin-top: 0;
+      margin-bottom: 0;
+      margin-left: .4rem;
+      overflow: hidden;
+      font-size: min(max(0.8rem, 1vw), 1rem)
+    }
   }
 
   .menu-button-container {
@@ -44,51 +38,49 @@
     cursor: pointer;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center
   }
 
   #menu-toggle {
-    display: none;
+    display: none
   }
 
-  .menu-button,
-  .menu-button::before,
-  .menu-button::after {
+  .menu-button, .menu-button::before, .menu-button::after {
     display: block;
-    background-color: $tdbc-color-menu-button;
+    background-color: #262525;
     position: absolute;
     height: 4px;
     width: 30px;
     transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    border-radius: 2px;
+    border-radius: 2px
   }
 
   .menu-button::before {
-    content: '';
-    margin-top: -8px;
+    content: "";
+    margin-top: -8px
   }
 
   .menu-button::after {
-    content: '';
-    margin-top: 8px;
+    content: "";
+    margin-top: 8px
   }
 
   #menu-toggle:checked + .menu-button-container .menu-button::before {
-    margin-top: 0px;
-    transform: rotate(405deg);
+    margin-top: 0;
+    transform: rotate(405deg)
   }
 
   #menu-toggle:checked + .menu-button-container .menu-button {
-    background: rgba(255, 255, 255, 0);
+    background: rgba(255, 255, 255, 0)
   }
 
   #menu-toggle:checked + .menu-button-container .menu-button::after {
-    margin-top: 0px;
-    transform: rotate(-405deg);
+    margin-top: 0;
+    transform: rotate(-405deg)
   }
 
   .menu-button-container {
-    display: flex;
+    display: flex
   }
 
   .menu {
@@ -99,7 +91,7 @@
     flex-direction: column;
     width: 100%;
     justify-content: center;
-    align-items: center;
+    align-items: center
   }
 
   #menu-toggle ~ .menu li {
@@ -107,40 +99,40 @@
     margin: 0;
     padding: 0;
     border: 0;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1)
   }
 
   #menu-toggle:checked ~ .menu li {
     border: 1px solid #b4b0b0;
     height: 2.5em;
-    padding: 0.5em;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    padding: .5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1)
   }
 
   .menu > li {
     display: flex;
     justify-content: center;
     margin: 0;
-    padding: 0.5em 0;
+    padding: .5em 0;
     width: 100%;
+    background-color: #4d1972
+  }
 
-    a:not(.tdbc-button) {
-      color: white;
-      width: 100%;
-      text-align: center;
-    }
-
-    background-color: #4d1972;
+  .menu > li a:not(.tdbc-button) {
+    color: #fff;
+    width: 100%;
+    text-align: center
   }
 
   .menu > li:not(:last-child) {
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid #444
   }
 
   img {
     display: inline-block;
     max-width: 100%;
     margin: auto;
-    vertical-align: middle;
+    vertical-align: middle
   }
 }
+
