Update styling and social plugins implementation
Refactored the styling from custom CSS to Tailwind CSS classes for better maintainability. Additionally, replaced the inline JavaScript implementation for rendering social plugins with a more modular nunjucks component, improving code readability and reusability. The preact version was also updated for better performance and reliability.

--- a/src/_includes/layouts/advent.njk
+++ b/src/_includes/layouts/advent.njk
@@ -7,14 +7,8 @@ layout: layouts/base.njk
   <article class="event tdbc-mx-auto">
     <header class="event__header">
       <h1>{{ title }}</h1>
-      <div style="float: right">
-        <div style="float: right">
-          <div id="preact-sns"></div>
-          <script type="module">
-            import { render } from '/js/preact/social_plugins.client.js';
-            render({url: '{{ meta.url }}', path: '{{ url }}'}, document.getElementById("preact-sns"));
-          </script>
-        </div>
+      <div class="float-right">
+        {{ comp.SocialPlugins({url: url}) | safe }}
       </div>
     </header>
 
