--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -101,7 +101,8 @@
   });
 </script>
   <body>
-    <div id="fb-root"></div>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v18.0&appId=625393465273959" nonce="Ytcn0KH2"></script>
     {{ content | safe }}
     <footer class="tdbc-background--secondary">
       <div class="tdbc-container tdbc-text-align-center">
