Update CSS classes in layout and social plugins
The CSS class naming has been simplified in both the post layout and social plugins. This change makes for easier understanding and maintenance of the code. CSS classes specifically related to the size specifications on medium screen sizes have been adjusted.

--- a/src/_components/SocialPlugins.njk
+++ b/src/_components/SocialPlugins.njk
@@ -1,4 +1,4 @@
-<div class="tdbc-social-plugins h-20 md:max-2xl:h-10">
+<div class="tdbc-social-plugins h-20 md:h-10">
   <ul>
     <li class="tdbc-twitter-follow">
       <a
