chore: Refactor layout and styles for better organization
In this commit, style rules of the layout files were moved to their respective external CSS files to maintain separation of concerns. This also included adjustments to padding values and background properties for better appearance. Furthermore, redundant code in the home.njk layout file was cleaned up, and classes were renamed for clarity and consistency.

--- a/src/_includes/styles/_layout.pcss
+++ b/src/_includes/styles/_layout.pcss
@@ -60,11 +60,10 @@ ul.tdbc-column-container {
 }
 
 .tdbc-hero {
+  padding-top: 5vh;
   display: grid;
   min-height: 10vh;
-  padding-top: 3vh;
-  padding-bottom: 3vh;
-  @apply bg-white;
+  @apply bg-white pb-0;
   text-align: center;
   place-content: center;
 }
