--- a/src/css/style.css
+++ b/src/css/style.css
@@ -363,3 +363,38 @@ button.code-copy {
 .tdbc-anchor:hover {
   opacity: 1
 }
+
+/* top page */
+.home {
+  .additional-area {
+    border: #bebaba solid 1px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 2px #4f4f4f;
+    background-image: url('/img/logo/mameka_280.png');
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: right 1rem top 4rem;
+    background-blend-mode: overlay;
+    background-color: rgba(255, 255, 255, 0.5);
+
+    h2 {
+      border-bottom: #4f4f4f solid 1px;
+      padding-bottom: 0.7rem;
+      font-size: 1.4rem
+    }
+  }
+  a.all-article-link {
+    font-size: 0.85rem;
+    margin-left: 1rem;
+    text-decoration: none;
+  }
+  .tags a {
+    margin: 0.5rem;
+    line-height: 1.5rem;
+  }
+  .icon {
+    margin: 0 0.25rem;
+    display: inline-flex;
+    vertical-align: bottom;
+  }
+}
