chore: Improve mobile accessibility.
Adjust video embedding width and update CSS for code display

This commit modifies the layout of the video in the blog post, changing the width to 100% to enhance responsiveness. The CSS style file is also updated to set the maximum width for the non-language specific code and language-specific code elements, improving the appearance and readability of code blocks in the post.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,6 +208,14 @@ blockquote {
   :last-child {
     margin-bottom: 0;
   }
+  pre code:not([class*="language"]) {
+    max-width: calc(100vw - 4rem);
+  }
+
+  code[class*="language-"],
+  pre[class*="language-"] {
+    max-width: calc(100vw - 3.5rem);
+  }
 }
 
 .tdbc-lead {
